--- a/static/style.css
+++ b/static/style.css
@@ -48,6 +48,9 @@ h5 {
   max-height: fit-content;
 }
 
+iframe {
+  aspect-ratio: 16/9;
+}
 
 @media(max-width: 575px) {
   body {
@@ -82,6 +85,7 @@ h5 {
     display: block;
     width: 98vw;
   }
+
 }
 
 .menu_font {
