--- a/templates/contacts/contacts.html
+++ b/templates/contacts/contacts.html
@@ -16,8 +16,8 @@
         </p>
           
         <div style="font-size: 1.2rem">Претензии и предложения принимаются: </div>
-           <p> Контактный телефон: 79200711112 <br>
-            Почта: 79200711112@yandex.ru
+           <p> Контактный телефон: 8 800 100 0 800 <br>
+            Почта: support@ruversity.com
            </p>
         
         </div>
