--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
     <!-- ==========================SEO Tags================================== -->
     <meta name="description" content="Online школа. Купить online курсы недорого." />
-    <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" />
+    <link rel="icon"  type="image/png" href="{% static 'images/favicon.png' %}" />
     <!-- =========================================================================== -->
 
     <script src="https://kit.fontawesome.com/facf52e8a9.js" crossorigin="anonymous"></script>
