--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,7 @@ body {
   /*background-color: blueviolet;*/
   position: relative;
 }
+
 h3 {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-weight: 300;
@@ -41,6 +42,7 @@ h5 {
   display: inline;
   width: 20vw;
 }
+
 .card_menu {
   display: inline;
   width: 35vw;
@@ -60,13 +62,16 @@ iframe {
 @media(max-width: 575px) {
   body {
     font-size: 0.7rem;
-    min-width:fit-content;
+    min-width: fit-content;
   }
 
-  h3, h4, h5 {
+  h3,
+  h4,
+  h5 {
     font-size: 1rem;
     font-weight: 0;
   }
+
   .mobile {
     width: 20rem;
   }
@@ -85,6 +90,7 @@ iframe {
     display: block;
     width: 98vw;
   }
+
   .card_menu {
     margin-top: 2vh;
     display: block;
