--- a/templates/workshop/studio.html
+++ b/templates/workshop/studio.html
@@ -54,7 +54,7 @@
     <div class="col-3">
         <a href="{% url 'create_new_subject'  %}" style="text-decoration: none">
             <!-- <input type="submit" value="Create New Subject" class="btn btn-info btn-block"> -->
-            <input type="submit" value="Создать новый курс" class='btn btn-sm btn-block btn-outline-dark'>
+            <input type="submit" value="Создать новый курс" class='btn btn-sm btn-block btn-outline-dark' style="width: fit-content">
         </a>
     </div>
 </div>
