--- a/templates/workshop/edit_section.html
+++ b/templates/workshop/edit_section.html
@@ -85,11 +85,21 @@
         <div class="form-row mt-1 mb-1">
             <div class="col-3">
                 <label for="video_file">
-                    <strong>Загрузить файл mp4:</strong>
+                    <strong>Загрузить файл mp4 размером до 500MB:</strong>
                 </label>
             </div>
             <div class="col-4">
                 <input type="file" class="form-control" id="video_file" name="video_file" required>
+            </div>
+        </div>
+        <div class="form-row mt-1 mb-1">
+            <div class="col-3">
+                <label for="url_link">
+                    <strong>Введите ссылку на код:</strong>
+                </label>
+            </div>
+            <div class="col-4">
+                <input type="url" class="form-control" id="url_link" name="url_link" placeholder="Заполните, если необходимо.">
             </div>
         </div>
         <!-- <div class="form-row">
@@ -140,7 +150,7 @@
     <div class="form-row mt-1">
         <!-- <a href="{% url 'edit_lecture' lecture.id %}" style="text-decoration: none" id="title"> -->
         <div class="col-7">
-        <strong>Лекция {{lecture.enumerator}}: {{lecture.title}}. Длительность: {{lecture.length}} мин. Размер:  {{lecture.size_mb}} мб</strong>
+        <strong>Лекция {{lecture.enumerator}}: {{lecture.title}}. Длительность: {{lecture.length}} мин. Размер:  {{lecture.size_mb}} Mb</strong>
         </div>
         <div class="col-2">
             <input type="button" value="Редактировать" id="lecture_title" class="btn btn-sm btn-block btn-outline-dark">
@@ -178,11 +188,20 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-6"><strong>Размер: </strong></div>
-                                    <div class="col-5">{{lecture.length}} Mb</div>
+                                    <div class="col-5">{{lecture.size_mb}} Mb</div>
                                 </div>
+                                <div class="row mb-2">
+                                    <div class="col-6"><strong>Ccылка на код: </strong></div>
+                                    <div class="col-5">
+                                    {% for item in lecture.additionalmateriallink_set.all %}
+                                    <a href="{{item.url_link }}" target="_blank">{{item.url_link}}</a>    
+                                    {% endfor %}
+                                    </div>
+                                </div>
+
                                 <div class="row mt-1">
                                     <div class="col-5>
-                                            <a class=" nav-link" href="{{ lecture.video_file.url }}" target='_blank'>
+                                            <a class="nav-link" href="{{ lecture.video_file.url }}" target='_blank'>
                                         <!-- <a> -->
                                             <video oncontextmenu="return false;" width="320" height="240" controls
                                                 controlsList="nodownload">
@@ -216,7 +235,19 @@
                                             <input type="file" class="form-control" id="video_file" name="video_file" required>
                                         </div>
                                     </div>
-                                    <div class="row mt-4">
+
+                                    <div class="form-row mt-4">
+                                        <div class="col-4">
+                                            <label for="url_link">
+                                                <strong>Введите ссылку на код:</strong>
+                                            </label>
+                                        </div>
+                                        <div class="col-8">
+                                            <input type="url" class="form-control" id="url_link" name="url_link" placeholder="Заполните, если необходимо.">
+                                        </div>
+                                    </div>
+
+                                    <div class="row mt-2">
                                         <div class="col-4"></div>
                                         <div class="col-4"><input type="submit" value="Редактировать"
                                                 class='btn btn-block btn-outline-dark'>
@@ -225,7 +256,7 @@
                                 </form>
         
                                 <div class="col-4">
-                                    <a href="{% url 'delete_lecture' lecture.id %}">
+                                    <a href="{% url 'delete_lecture' lecture.id %}" style="text-decoration: none">
                                         <!-- <input type="submit" value="Delete" class="btn btn-info btn-block"> -->
                                         <input type="button" value="Удалить" class='btn btn-block btn-outline-dark'>
                                     </a>
