--- a/templates/workshop/edit_section.html
+++ b/templates/workshop/edit_section.html
@@ -61,7 +61,7 @@
     <form action="{% url 'create_new_lecture' subject.id section.id %}" method="POST" enctype="multipart/form-data">
                             {% csrf_token %}
         <div class="form-row mt-1 mb-1">
-            <div class="col-3">
+            <div class="col-5">
                 <label for="enumerator">
                     <strong>Порядковый номер лекции :</strong>
                 </label>
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="form-row mt-1 mb-1">
-            <div class="col-3">
+            <div class="col-5">
                 <label for="title">
                     <strong>Название лекции :</strong>
                 </label>
@@ -83,9 +83,9 @@
             </div>
         </div>
         <div class="form-row mt-1 mb-1">
-            <div class="col-3">
+            <div class="col-5">
                 <label for="video_file">
-                    <strong>Загрузить файл mp4 размером до 500MB:</strong>
+                    <strong><div class="div" style="color: blue">Загрузите видеофайл mp4 размером до 500Mb:</div></strong>
                 </label>
             </div>
             <div class="col-4">
@@ -93,13 +93,23 @@
             </div>
         </div>
         <div class="form-row mt-1 mb-1">
-            <div class="col-3">
-                <label for="url_link">
-                    <strong>Введите ссылку на код:</strong>
+            <div class="col-5">
+                <label for="additional_file">
+                    <strong>Если необходимо, загрузите текстовый, архивный файл или изображение:</strong>
                 </label>
             </div>
             <div class="col-4">
-                <input type="url" class="form-control" id="url_link" name="url_link" placeholder="Заполните, если необходимо.">
+                <input type="file" class="form-control" id="additional_file" name="additional_file">
+            </div>
+        </div>
+        <div class="form-row mt-1 mb-1">
+            <div class="col-5">
+                <label for="url_link">
+                    <strong>Если необходимо, введите ссылку на ресурс:</strong>
+                </label>
+            </div>
+            <div class="col-4">
+                <input type="url" class="form-control" id="url_link" name="url_link" placeholder="https://">
             </div>
         </div>
         <!-- <div class="form-row">
@@ -123,19 +133,19 @@
             </div> -->
        
         <div class="form-row">
-            <div class="col-2 ml-4">
+            <div class="col-5 pl-4">
             <input type="checkbox" id='free_access' class='form-check-input' name='free_access' value='free_access'>
             </div>
-            <div class="col-4 ml-5 pl-4">
+            <div class="col-4">
                 <label for="free_access">
                     <strong>Отметьте, если это бесплатная лекция</strong>
                 </label>
             </div>
         </div>
-        <div class="row mb-2">
-            <div class="col-3"></div>
+        <div class="form-row mb-3">
+            <div class="col-5"></div>
             <div class="col-4">
-                <input type="submit" value="Создать" class='btn btn-sm btn-block btn-outline-dark'>
+                <input type="submit" value="Создать" class='btn btn-block btn-outline-dark'>
             </div>
         </div>                               
 </div>
@@ -191,11 +201,27 @@
                                     <div class="col-5">{{lecture.size_mb}} Mb</div>
                                 </div>
                                 <div class="row mb-2">
-                                    <div class="col-6"><strong>Ccылка на код: </strong></div>
+                                    <div class="col-6"><strong>Ccылка на ресурс: </strong></div>
                                     <div class="col-5">
                                     {% for item in lecture.additionalmateriallink_set.all %}
-                                    <a href="{{item.url_link }}" target="_blank">{{item.url_link}}</a>    
+                                        {% if item.url_link == None %}
+                                            Ссылка отсутствует
+                                        {% else %}
+                                            <a href="{{item.url_link }}" target="_blank">{{item.url_link}}</a>
+                                        {% endif %}   
                                     {% endfor %}
+                                    </div>
+                                </div>
+                                <div class="row mb-2">
+                                    <div class="col-6"><strong>Дополнительный файл:</strong></div>
+                                    <div class="col-5">
+                                        {% for item in lecture.additionalmaterialfile_set.all %}
+                                            {% if item.additional_file == None %}
+                                                Файл не задан
+                                            {% else %}
+                                                <a class="nav-link" href="{{ item.additional_file.url }}" download >Ссылка на файл</a>
+                                            {% endif %}
+                                        {% endfor %}
                                     </div>
                                 </div>
 
@@ -229,7 +255,7 @@
                                                 placeholder="Название лекции" required></div>
                                     </div>
                                     <div class="form-row">
-                                        <div class="col-4"><label for="video_file"> <strong>Введите файл: </strong></label>
+                                        <div class="col-4"><label for="video_file"> <strong>Загрузите видеофайл: </strong></label>
                                         </div>
                                         <div class="col-8">
                                             <input type="file" class="form-control" id="video_file" name="video_file" required>
@@ -239,14 +265,20 @@
                                     <div class="form-row mt-4">
                                         <div class="col-4">
                                             <label for="url_link">
-                                                <strong>Введите ссылку на код:</strong>
+                                                <strong>Введите ссылку на ресурс:</strong>
                                             </label>
                                         </div>
                                         <div class="col-8">
-                                            <input type="url" class="form-control" id="url_link" name="url_link" placeholder="Заполните, если необходимо.">
+                                            <input type="url" class="form-control" id="url_link" name="url_link" placeholder="https://.">
                                         </div>
                                     </div>
-
+                                    <div class="form-row">
+                                        <div class="col-4"><label for="additional_file"> <strong>Загрузите дополнительный файл: </strong></label>
+                                        </div>
+                                        <div class="col-8">
+                                            <input type="file" class="form-control" id="additional_file" name="additional_file">
+                                        </div>
+                                    </div>
                                     <div class="row mt-2">
                                         <div class="col-4"></div>
                                         <div class="col-4"><input type="submit" value="Редактировать"
