--- a/templates/workshop/edit_section.html
+++ b/templates/workshop/edit_section.html
@@ -210,8 +210,8 @@
 
     {% for item in v_files%}
     <div class="row">
-        <div class="col"> <div class="d-1" draggable="True">{{item.id}}</div></div>
-        <div class="col">{{item.video_file}}</div>
+        <div class="col-2"> <div class="d-1" draggable="true">{{item.id}}</div></div>
+        <div class="col-10">{{item.video_file}}</div>
     </div>
     {% endfor %}
 </div>
@@ -221,8 +221,6 @@
 
 <!-- ====================Edit Lecture Box========================================== -->
     <h3>Подготовленные лекции</h3>
-   
-
 {% for lecture in lectures %}
 {% if lecture.section == section %}
 
@@ -394,8 +392,9 @@
     const lectures = document.querySelectorAll('#lectureModal');
     const titles = document.querySelectorAll('#lecture_title');
     const buttons = document.querySelectorAll('.btn-close');
+    //Drag & Drop API
     const video_lib = document.querySelectorAll('.video_lib');
-    const b_1 = document.querySelectorAll('.b-1');
+    //const b_1 = document.querySelectorAll('.b-1');
     const d_1 = document.querySelectorAll('.d-1');
     const i_1 = document.querySelector('.i-1');
 
@@ -411,14 +410,49 @@
                 lectures[i].classList.remove('openModal')
             })
         }
-       
 
-        //for (let i = 0; i < video_lib.length; i++) {
-        //        b_1[i].addEventListener('click', e => {
-        //            let data=video_lib[i].innerHTML;
-        //            i_1.value=data;
-        //        })
-        //    }
+
+        //=================Drag & Drop===============
+        for (let i = 0; i < d_1.length; i++) {
+            d_1[i].addEventListener('dragstart', dragStart);
+            d_1[i].addEventListener('dragend', dragEnd);
+        }
+
+        
+        function dragStart() {
+            setTimeout(()=> {
+            this.classList.add('d-1-hidden');
+            }, 100)
+        };
+        
+        function dragEnd() {
+            setTimeout(()=> {
+            this.classList.remove('d-1-hidden');
+            }, 100)
+        };
+
+        i_1.addEventListener('dragover', dragOver)
+        i_1.addEventListener('dragenter', dragEnter)
+        i_1.addEventListener('dragleave', dragLeave)
+        i_1.addEventListener('drop', dragDrop)
+
+       
+        function dragOver (e) {
+            e.preventDefault();
+        };
+        function dragEnter () {
+            this.classList.add('hovered');
+        };
+        function dragLeave () {
+            this.classList.remove('hovered');
+        };
+
+        function dragDrop () {
+            data= document.querySelector('.d-1-hidden').innerText;
+            this.value=data;
+        };
+        
+
         //for (let i = 0; i < video_lib.length; i++) {
         //    b_1[i].addEventListener('click', e => {
         //        let data = video_lib[i].url;
@@ -431,10 +465,7 @@
         //        document.querySelector('.i-1').value = data;
         //    })
 
- 
- 
-
-        
+   
     console.log('end OK')
 </script>
 
