--- a/templates/subject_page.html
+++ b/templates/subject_page.html
@@ -49,7 +49,7 @@
 
             <!-- <div class="collapse show" id='collapse-p'> -->
             <div class="collapse" id='collapse-p'>
-            <div class="row" style='height:13.5rem'>
+            <div class="row" style='height: fit-content'>
                 <div class="col">
                 {{subject.description}}
             </div>
@@ -67,7 +67,7 @@
             
 
             <div class="collapse" id='collapse-pr'>
-                <div class="row" style='height:13.5rem'>
+                <div class="row" style='height: fit-content'>
                     <div class="col">
                     {{subject.prerequisite}}
                     </div>
