--- a/static/style.css
+++ b/static/style.css
@@ -22,7 +22,7 @@ h3 {
 }
 
 h5 {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .my_footer {
@@ -621,16 +621,24 @@ select>option {
 
 }
 
+.video_library
+{
+  width: 20rem;
+  border: 1px solid #aaaaaa;
+  margin-top: 1rem;
+  /*background-color: brown;*/
+}
+
 .lecture_box {
   padding: 1rem;
   margin: auto;
   /* display: block; */
   position: absolute;
   top: 20Vh;
-  left: 20vw;
+  left: 10vw;
   border-radius: 0.5%;
   /* position: absolute; */
-  width: 62rem;
+  width: 80vw;
   height: fit-content;
   background-color: white;
   /* overflow-y: scroll; */
@@ -685,4 +693,37 @@ select>option {
   /* visibility: visible;
   visibility: hidden;*/
   z-index: 1;
+}
+
+.video_library {
+  background-color: grey;
+  margin-top: 2px;
+  border-radius: 5px;
+  border-color: grey;
+  border-width: 2px;
+}
+
+.d-1 {
+  cursor: all-scroll;
+  border-radius: 1pc;
+  border: solid;
+  border-color: blue;
+  width: fit-content;
+  margin: 1px;
+  padding: 2px;
+}
+
+.d-1:hover {
+   background-color: #aaaaaa;
+   color: white;
+}
+
+.d-1-hidden {
+  display:none
+}
+
+.hovered {
+  background-color: #d1d8e2;
+  border: solid;
+  border-color: blue;
 }
